--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Big_Finish_Player.App"
+﻿<Application x:Class="MP3_Player.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Big_Finish_Player"
+             xmlns:local="clr-namespace:MP3_Player"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
