--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Big_Finish_Player.MainWindow"
+﻿<Window x:Class="MP3_Player.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Big_Finish_Player"
+        xmlns:local="clr-namespace:MP3_Player"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="600"
         MinWidth="400" MinHeight="700">
